--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ Jinja2==3.1.5
 MarkupSafe==3.0.2
 numpy==2.2.2
 opencv-python==4.11.0.86
+pillow==11.1.0
 pycparser==2.22
 python-dotenv==1.0.1
 requests==2.32.3
+scikit-video==1.1.11
+scipy==1.15.1
 urllib3==2.3.0
 Werkzeug==3.1.3
