--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bidict==0.23.1
 blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
@@ -5,19 +6,50 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.1
+dnspython==2.7.0
+eventlet==0.39.1
+filelock==3.18.0
 Flask==3.1.0
 flask-cors==5.0.1
+Flask-SocketIO==5.5.1
+fsspec==2025.3.2
+gevent==24.11.1
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+llvmlite==0.44.0
 MarkupSafe==3.0.2
-numpy==2.2.2
+more-itertools==10.6.0
+mpmath==1.3.0
+networkx==3.4.2
+numba==0.61.0
+numpy==2.1.3
+openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
 opencv-python==4.11.0.86
+packaging==24.2
 pillow==11.1.0
 pycparser==2.22
 python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
+regex==2024.11.6
 requests==2.32.3
 scikit-video==1.1.11
 scipy==1.15.1
+setuptools==78.1.0
+simple-websocket==1.1.0
+six==1.17.0
+sympy==1.13.1
+tiktoken==0.9.0
+torch==2.6.0
+tqdm==4.67.1
+typing_extensions==4.13.0
 urllib3==2.3.0
 Werkzeug==3.1.3
+wheel==0.45.1
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
