--- a/requirements.txt
+++ b/requirements.txt
@@ -33,11 +33,15 @@ PyYAML==6.0.2
 reportlab==4.4.1
 requests==2.32.4
 six==1.17.0
+srt==3.5.3
 svglib==1.5.1
 tinycss2==1.4.0
+tqdm==4.67.1
 tzlocal==5.3.1
 uritools==5.0.0
 urllib3==2.4.0
+vosk==0.3.45
 webencodings==0.5.1
+websockets==15.0.1
 Werkzeug==3.1.3
 xhtml2pdf==0.2.17
